[project]
name = "teinfbot"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "discord-py>=2.5.2",
    "motor>=3.7.1",
    "pymongo>=4.12.1",
    "requests-futures>=1.0.2",
]

[dependency-groups]
dev = [
    "ruff>=0.11.8",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
